--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "seed": "dotenv -e .env.local tsx scripts/seed.js",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -17,7 +18,10 @@
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "dotenv": "^16.4.5",
+    "dotenv-cli": "^7.4.2",
     "eslint": "8.7.0",
-    "eslint-config-next": "12.0.9"
+    "eslint-config-next": "12.0.9",
+    "tsx": "^4.15.2"
   }
 }
